--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/fullcalendar.css' %}"/>
     <link rel="stylesheet" href="{% static 'assets/css/fullcalendar.css' %}"/>
     <link rel="stylesheet" href="{% static 'assets/css/main.css' %}"/>
+    <script src="{% static 'assets/js/jquery.js' %}"></script>
     {% block extra_head %}
     {% endblock %}
 </head>
@@ -197,6 +198,7 @@
 <script src="{% static 'assets/js/world-merc.js' %}"></script>
 <script src="{% static 'assets/js/polyfill.js' %}"></script>
 <script src="{% static 'assets/js/main.js' %}"></script>
+
 
 </body>
 </html>
