--- a/templates/inventario/compras/entrada_insumo_view.html
+++ b/templates/inventario/compras/entrada_insumo_view.html
@@ -31,17 +31,19 @@
                     </button>
                 </div>
                 <div class="modal-body px-0">
-                    <div class="content mb-30">
+                    <form action="">
+                        <div class="content mb-30">
 
-                    </div>
-                    <div class="action d-flex flex-wrap justify-content-end">
-                        <button data-bs-dismiss="modal" class="main-btn danger-btn-outline btn-hover m-1">
-                            Cancelar
-                        </button>
-                        <button data-bs-dismiss="modal" class="main-btn primary-btn btn-hover m-1">
-                            Guardar
-                        </button>
-                    </div>
+                        </div>
+                        <div class="action d-flex flex-wrap justify-content-end">
+                            <button data-bs-dismiss="modal" class="main-btn danger-btn-outline btn-hover m-1">
+                                Cancelar
+                            </button>
+                            <button data-bs-dismiss="modal" class="main-btn primary-btn btn-hover m-1">
+                                Guardar
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
