--- a/templates/inventario/proveedor/view.html
+++ b/templates/inventario/proveedor/view.html
@@ -4,174 +4,176 @@
 {% block title %}Insumos{% endblock %}
 
 {% block content %}
-    <!-- ========== title-wrapper start ========== -->
-    <div class="title-wrapper pt-30">
-        <div class="row align-items-center">
-            <div class="col-md-6">
-                <div class="title d-flex align-items-center flex-wrap mb-30">
-                    <h2 class="mr-40">Proveedor</h2>
-                    <a href="{% url 'inventario:add_proveedor' %}" class="main-btn primary-btn btn-hover btn-sm">
-                        <i class="lni lni-plus mr-5"></i> Adicionar</a>
-                </div>
+<!-- ========== title-wrapper start ========== -->
+<div class="title-wrapper pt-30">
+    <div class="row align-items-center">
+        <div class="col-md-6">
+            <div class="title d-flex align-items-center flex-wrap mb-30">
+                <h2 class="mr-40">Proveedor</h2>
+                <a href="{% url 'inventario:add_proveedor' %}" class="main-btn primary-btn btn-hover btn-sm">
+                    <i class="lni lni-plus mr-5"></i> Adicionar</a>
             </div>
-            <!-- end col -->
-            <div class="col-md-6">
-                <div class="breadcrumb-wrapper mb-30">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item ">
-                                <a href="{% url 'home' %}">Home</a>
-                            </li>
-
-                            <li class="breadcrumb-item ">
-                                <a href="{% url 'inventario:inventario' %}">Inventario</a>
-                            </li>
-
-                            <li class="breadcrumb-item ">
-                                <a href="{% url 'inventario:insumo' %}">Insumos</a>
-                            </li>
-
-                            <li class="breadcrumb-item active" aria-current="page">
-                                Proveedor
-                            </li>
-
-                        </ol>
-                    </nav>
-                </div>
-            </div>
-            <!-- end col -->
         </div>
-        <!-- end row -->
+        <!-- end col -->
+        <div class="col-md-6">
+            <div class="breadcrumb-wrapper mb-30">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item ">
+                            <a href="{% url 'home' %}">Home</a>
+                        </li>
+
+                        <li class="breadcrumb-item ">
+                            <a href="{% url 'inventario:inventario' %}">Inventario</a>
+                        </li>
+
+                        <li class="breadcrumb-item ">
+                            <a href="{% url 'inventario:insumo' %}">Insumos</a>
+                        </li>
+
+                        <li class="breadcrumb-item active" aria-current="page">
+                            Proveedor
+                        </li>
+
+                    </ol>
+                </nav>
+            </div>
+        </div>
+        <!-- end col -->
     </div>
-    <!-- ========== title-wrapper end ========== -->
+    <!-- end row -->
+</div>
+<!-- ========== title-wrapper end ========== -->
 
 
+<div class="row pb-3">
+    <div class="dropdown">
+        <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false">
+            Reportes
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="{% url 'inventario:reporte_proveedor_xlsx' %}">Reporte de
+                proveedores</a></li>
+
+
+        </ul>
+    </div>
+
+</div>
+
+<!-- ========== tables-wrapper start ========== -->
+<div class="tables-wrapper">
+
+    <!-- ========== option-header start ========== -->
     <div class="row pb-3">
-        <div class="dropdown">
-            <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton1"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                Reportes
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href="{% url 'inventario:reporte_proveedor_xlsx' %}">Reporte de
-                    proveedores</a></li>
-
-
-            </ul>
-        </div>
-
     </div>
+    <!-- ========== option-header end ========== -->
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card-style mb-30">
+                <h6 class="mb-10">Proveedores</h6>
+                <p class="text-sm mb-20">
 
-    <!-- ========== tables-wrapper start ========== -->
-    <div class="tables-wrapper">
+                </p>
+                <div class="table-wrapper table-responsive">
 
-        <!-- ========== option-header start ========== -->
-        <div class="row pb-3">
-        </div>
-        <!-- ========== option-header end ========== -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card-style mb-30">
-                    <h6 class="mb-10">Proveedores</h6>
-                    <p class="text-sm mb-20">
+                    <table class="table top-selling-table">
+                        <thead>
+                        <tr>
+                            <th>
+                                <h6 class="text-sm text-medium">Cod.</h6>
+                            </th>
+                            <th>
+                                <h6 class="text-sm text-medium">Razón Social</h6>
+                            </th>
+                            <th>
+                                <h6 class="text-sm text-medium">Email</h6>
+                            </th>
 
-                    </p>
-                    <div class="table-wrapper table-responsive">
+                            <th>
+                                <h6 class="text-sm text-medium">Teléfono</h6>
+                            </th>
 
-                        <table class="table top-selling-table">
-                            <thead>
-                            <tr>
-                                <th>
-                                    <h6 class="text-sm text-medium">Cod.</h6>
-                                </th>
-                                <th>
-                                    <h6 class="text-sm text-medium">Razón Social</h6>
-                                </th>
-                                <th>
-                                    <h6 class="text-sm text-medium">Email</h6>
-                                </th>
+                            <th>
+                                <h6 class="text-sm text-medium text-end">
+                                    Acciones
+                                </h6>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for proveedor in proveedores %}
 
-                                <th>
-                                    <h6 class="text-sm text-medium">Teléfono</h6>
-                                </th>
+                        <tr>
+                            <td>
+                                {{ forloop.counter }}
+                            </td>
+                            <td>
+                                <p class="text-sm">{{ proveedor.razon_social }}</p>
+                            </td>
 
-                                <th>
-                                    <h6 class="text-sm text-medium text-end">
-                                        Acciones
-                                    </h6>
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for proveedor in proveedores %}
+                            <td>
+                                <p class="text-sm">{{ proveedor.email }}</p>
+                            </td>
 
-                                <tr>
-                                    <td>
-                                        {{ forloop.counter }}
-                                    </td>
-                                    <td>
-                                        <p class="text-sm">{{ proveedor.razon_social }}</p>
-                                    </td>
+                            <td>
+                                <p class="text-sm">{{ proveedor.telefono }}</p>
+                            </td>
 
-                                    <td>
-                                        <p class="text-sm">{{ proveedor.email }}</p>
-                                    </td>
+                            <td>
+                                <div class="action justify-content-end">
 
-                                    <td>
-                                        <p class="text-sm">{{ proveedor.telefono }}</p>
-                                    </td>
+                                    <button
+                                            class="more-btn ml-10 dropdown-toggle"
+                                            id="moreAction1"
+                                            data-bs-toggle="dropdown"
+                                            aria-expanded="false"
+                                    >
+                                        <i class="lni lni-more-alt"></i>
+                                    </button>
+                                    <ul
+                                            class="dropdown-menu dropdown-menu-end"
+                                            aria-labelledby="moreAction1"
+                                    >
+                                        {% if not  proveedor.en_uso %}
+                                        <li class="dropdown-item">
+                                            <a href="{% url 'inventario:delete_proveedor' proveedor.pk %}"
 
-                                    <td>
-                                        <div class="action justify-content-end">
-
-                                            <button
-                                                    class="more-btn ml-10 dropdown-toggle"
-                                                    id="moreAction1"
-                                                    data-bs-toggle="dropdown"
-                                                    aria-expanded="false"
-                                            >
-                                                <i class="lni lni-more-alt"></i>
-                                            </button>
-                                            <ul
-                                                    class="dropdown-menu dropdown-menu-end"
-                                                    aria-labelledby="moreAction1"
-                                            >
-                                                <li class="dropdown-item">
-                                                    <a href="{% url 'inventario:delete_proveedor' proveedor.pk %}"
-
-                                                       class="text-gray">Eliminar</a>
-                                                </li>
-                                                <li class="dropdown-item">
-                                                    <a href="{% url 'inventario:edit_proveedor' proveedor.pk %}"
-                                                       class="text-gray">Editar</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </td>
-                                </tr>
+                                               class="text-gray">Eliminar</a>
+                                        </li>
+                                        {% endif %}
+                                        <li class="dropdown-item">
+                                            <a href="{% url 'inventario:edit_proveedor' proveedor.pk %}"
+                                               class="text-gray">Editar</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
 
 
-                            {% empty %}
-                                <tr>
-                                    <td> No existen registros</td>
-                                </tr>
-                            {% endfor %}
+                        {% empty %}
+                        <tr>
+                            <td> No existen registros</td>
+                        </tr>
+                        {% endfor %}
 
 
-                            </tbody>
-                        </table>
-                        <!-- End Table -->
-                    </div>
-                    {% include "paginador_snippet.html" %}
+                        </tbody>
+                    </table>
+                    <!-- End Table -->
                 </div>
-                <!-- end card -->
+                {% include "paginador_snippet.html" %}
             </div>
-            <!-- end col -->
+            <!-- end card -->
         </div>
-        <!-- end row -->
-
+        <!-- end col -->
     </div>
-    <!-- ========== tables-wrapper end ========== -->
+    <!-- end row -->
+
+</div>
+<!-- ========== tables-wrapper end ========== -->
 {% endblock %}
 <!-- Modal Eliminar -->
 <div class="modal fade" id="eliminar" role="dialog">
