--- a/templates/inventario/compras/modal/compraFormModal.html
+++ b/templates/inventario/compras/modal/compraFormModal.html
@@ -30,6 +30,50 @@
 
         {% endfor %}
     </div>
+    <div class="row">
+        <h3>Listado de insumos</h3>
+        <hr>
+        <table class="table">
+            <thead class="table-light">
+            <tr>
+                <th>Insumo</th>
+                <th>Precio</th>
+                <th>Cantidad</th>
+                <th>Total</th>
+                <th>
+                    <div class="action justify-content-center">
+                        <a href="Javascript:void(0);" data-bs-toggle="modal" data-bs-target="#id_items"  class="main-btn primary-btn btn-hover btn-sm">
+                        <i class="lni lni-plus mr-5"></i> </a>
+
+                    </div>
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Product 1</td>
+                <td>$10</td>
+                <td>
+                    <input class="form-control w-50" type="number" min=0 name="cantidad" id="id_cantidad">
+                </td>
+                <td>$10</td>
+                <td>
+                    <div class="action justify-content-center">
+                        <a  href="Javascript:void(0);" class="text-danger">
+                            <i class="lni lni-trash-can"></i>
+                        </a>
+
+                    </div>
+                </td>
+            </tr>
+
+            </tbody>
+        </table>
+
+
+
+
+    </div>
     <div class="action d-flex flex-wrap justify-content-end">
         <button data-bs-dismiss="modal" class="main-btn danger-btn-outline btn-hover m-1">
             Cancelar
@@ -44,3 +88,8 @@
 
 
 
+
+<script>
+
+
+</script>
