--- a/templates/base.html
+++ b/templates/base.html
@@ -181,6 +181,8 @@
 <script src="{% static 'assets/js/polyfill.js' %}"></script>
 <script src="{% static 'assets/js/main.js' %}"></script>
 
+{% block javascript %}
 
+{% endblock %}
 </body>
 </html>
