--- a/templates/inventario/insumo/insumo_view.html
+++ b/templates/inventario/insumo/insumo_view.html
@@ -103,6 +103,11 @@
                                 <th>
                                     <h6 class="text-sm text-medium">Descripción</h6>
                                 </th>
+                                 <th class="min-width">
+                                    <h6 class="text-sm text-medium">
+                                        Existencia
+                                    </h6>
+                                </th>
 
                                 <th class="min-width">
                                     <h6 class="text-sm text-medium">
@@ -140,6 +145,10 @@
                                     </td>
                                     <td>
                                         <p class="text-sm">{{ insumo.descripcion }}</p>
+                                    </td>
+
+                                    <td>
+                                        <p class="text-sm">{{ insumo.cantidad }}</p>
                                     </td>
                                     <td>
                                         <p class="text-sm">{{ insumo.minimo }}</p>
